--- a/src/index.css
+++ b/src/index.css
@@ -89,3 +89,84 @@ ol, ul {
   outline: none;
   border: 1px solid var(--color-main-light) ;
 }
+
+
+/* -------- d-table ----  */
+.d-table{
+  width: 100%;
+  margin: 1rem 0rem;
+  overflow-x: auto;
+  font-size: 0.88rem;
+}
+.d-table i{
+  font-size: 0.78rem;
+}
+.d-table th{
+  font-weight: 500;
+  min-width: max-content;
+}
+.d-table img{
+  height: 50px;
+  width: 50px;
+  object-fit: cover;
+}
+
+.d-table .bt{
+  padding: 2px 5px;
+  border-radius: 5px;
+  color: white;
+  text-decoration: none;
+  transition: var(--transition-3);
+}
+.d-table .bt:hover{
+  opacity: 0.5;
+}
+.d-table .bt.edit{
+  background: var(--color-green);
+}
+.d-table .bt.delete{
+  background: red;
+}
+
+
+
+/* --- d-form ---  */
+.d-form{
+  margin: 1rem 0rem;
+  padding: 1rem 0.5rem;
+  background: white;
+  border-radius: 10px;
+}
+.form-control{
+  border: 1px solid var(--color-blue-light) !important;
+  outline: none;
+}
+.form-control:focus {
+  color: var(--bs-body-color);
+  background-color: var(--bs-body-bg);
+  border-color: var(--color-blue-light) !important;
+  outline: 0;
+  box-shadow: none !important;
+}
+.form-check-input{
+  border-color: var(--color-blue-light) !important;
+}
+.form-check-input:checked {
+  background-color: var(--color-blue-light) !important;
+  border-color: var(--color-blue-light) !important;
+}
+.form-check-input:focus {
+  border-color: var(--color-blue-light) !important;
+  box-shadow: none !important;
+}
+button[type="submit"]{
+  padding: 0.3rem 1rem;
+  border: 1px solid var(--color-main-light);
+  outline: none;
+  background: var(--color-main-light);
+  background: var(--color-green);
+  color: white;
+  text-transform: uppercase;
+  font-size: 1.1rem;
+}
+
